--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "parceltest2",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "./scripts/app.js",
   "scripts": {
-    "start": "parcel app.js --hmr-port 50619"
+    "start": "parcel ./scripts/app.js --hmr-port 50619"
   },
   "repository": {
     "type": "git",
